# ai-devs-4-builders

./: README.md  pyproject.toml
ai/: __init__.py  agent.py  example_workflow.py  memory.py  orchestrator.py  task.py
ai/agents/: file_reader_agent.py
ai/audio_agents/: stt_agent.py  tts_agent.py
ai/tools/: definition.py  document_crawler.py  files.py  hub_requests.py  image.py  shell.py
task/task10_drone/: run_task10_drone.py  run_task10_drone_old_version.py
task/task11_evaluation/: run_task11_evaluation.py
task/task12_firmware/: run_task12_firmware.py
task/task13_reactor/: run_task13_reactor.py
task/task14_negotiations/: negotiations_server.py  run_task14_negotiations.py
task/task15_savethem/: run_task15_savethem.py
task/task16_okoeditor/: run_task16_okoeditor.py
task/task17_windpower/: README.md  run_task17_windpower.py
task/task18_domatowo/: README.md  map_analysis.md  run_task18_domatowo.py
task/task19_filesystem/: run_task19_filesystem.py
task/task1_people/: run_task1_people.py
task/task20_foodwarehouse/: foodwarehouse_agentic_task.py  foodwarehouse_tools.py  run_task20_foodwarehouse.py
task/task20_foodwarehouse_v2/: city_matcher.py  data_loader.py  foodwarehouse_task.py  order_service.py  run_task20_foodwarehouse.py
task/task21_radiomonitoring/: radiomonitoring_listener_task.py  run_task21_radiomonitoring.py
task/task22_phonecall/: phonecall_task.py  run_task22_phonecall.py
task/task23_shellaccess/: prompt.md  run_task23_shellaccess.py  shellaccess_task.py
task/task24_goingthere/: agents.py  goingthere_task.py  (+1 more)
(+36 files in other folders)
